[gd_scene load_steps=14 format=3 uid="uid://d2qg587omjywm"]

[ext_resource type="Script" path="res://prefab/UI/OptionPanel.gd" id="1_v2t62"]
[ext_resource type="Texture2D" uid="uid://8edplubtbkbr" path="res://assets/UI/wood-box.png" id="2_u6yxu"]
[ext_resource type="Texture2D" uid="uid://bpt7n5fbi8xg5" path="res://assets/UI/text-box.png" id="3_vc324"]
[ext_resource type="Texture2D" uid="uid://dnmhbqlysi5ph" path="res://assets/UI/red-button-normal.png" id="4_8st83"]
[ext_resource type="FontFile" uid="uid://bddtsccx0qour" path="res://assets/UI/Fonts/dogicapixel.otf" id="4_bux1i"]
[ext_resource type="Texture2D" uid="uid://cgoomtgcn04sq" path="res://assets/UI/red-button-pressed.png" id="5_d5dbl"]
[ext_resource type="Texture2D" uid="uid://cl20mjeo1aqyx" path="res://assets/UI/red-button-hover.png" id="6_bmld6"]
[ext_resource type="Texture2D" uid="uid://6py808jaoso2" path="res://assets/UI/button_disabled.png" id="7_hw82d"]
[ext_resource type="Texture2D" uid="uid://bclxecir5ivmv" path="res://assets/UI/button-red-small-normalt.png" id="9_mqodm"]
[ext_resource type="Texture2D" uid="uid://c2mepjbti1rjb" path="res://assets/UI/button-red-small-hovert.png" id="10_j7he6"]
[ext_resource type="Texture2D" uid="uid://7t4cecn0xlc6" path="res://assets/UI/button-red-small-pressedt.png" id="11_bk0r5"]
[ext_resource type="Texture2D" uid="uid://dlbf0ofue7pd0" path="res://assets/UI/button-small-disabled.png" id="11_ul2d0"]
[ext_resource type="Texture2D" uid="uid://b01dlyko5c35h" path="res://assets/UI/checkmark.png" id="13_8qtrb"]

[node name="OptionPanel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2t62")

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u6yxu")
patch_margin_left = 24
patch_margin_top = 16
patch_margin_right = 24
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="V" type="VBoxContainer" parent="BG/M"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeadBG" type="NinePatchRect" parent="BG/M/V"]
layout_mode = 2
texture = ExtResource("3_vc324")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="BG/M/V/HeadBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.278431)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Optionen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BBox" type="HBoxContainer" parent="BG/M/V"]
layout_mode = 2
alignment = 1

[node name="AudioBtn" type="TextureButton" parent="BG/M/V/BBox"]
layout_mode = 2
texture_normal = ExtResource("4_8st83")
texture_pressed = ExtResource("5_d5dbl")
texture_hover = ExtResource("6_bmld6")
texture_disabled = ExtResource("7_hw82d")

[node name="Label" type="Label" parent="BG/M/V/BBox/AudioBtn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.0625
anchor_right = 0.9375
anchor_bottom = 0.8125
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VideoBtn" type="TextureButton" parent="BG/M/V/BBox"]
layout_mode = 2
texture_normal = ExtResource("4_8st83")
texture_pressed = ExtResource("5_d5dbl")
texture_hover = ExtResource("6_bmld6")
texture_disabled = ExtResource("7_hw82d")

[node name="Label" type="Label" parent="BG/M/V/BBox/VideoBtn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.0625
anchor_right = 0.9375
anchor_bottom = 0.8125
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Video"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyBtn" type="TextureButton" parent="BG/M/V/BBox"]
layout_mode = 2
texture_normal = ExtResource("4_8st83")
texture_pressed = ExtResource("5_d5dbl")
texture_hover = ExtResource("6_bmld6")
texture_disabled = ExtResource("7_hw82d")

[node name="Label" type="Label" parent="BG/M/V/BBox/KeyBtn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.0625
anchor_right = 0.9375
anchor_bottom = 0.8125
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Tasten"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioOptions" type="NinePatchRect" parent="BG/M/V"]
visible = false
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_vc324")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="BG/M/V/AudioOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Options" type="VBoxContainer" parent="BG/M/V/AudioOptions/M"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 1
alignment = 1

[node name="TabHeader" type="Label" parent="BG/M/V/AudioOptions/M/Options"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 0.741176, 0.0509804, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="H" type="HBoxContainer" parent="BG/M/V/AudioOptions/M/Options"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="BG/M/V/AudioOptions/M/Options/H"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.0745098, 0.537255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Gesamt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="BG/M/V/AudioOptions/M/Options/H"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.25098, 0.67451, 0.184314, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AllAudioSlider" type="HSlider" parent="BG/M/V/AudioOptions/M/Options/H"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("9_mqodm")
theme_override_icons/grabber_highlight = ExtResource("10_j7he6")
theme_override_icons/grabber_disabled = ExtResource("11_ul2d0")
min_value = -72.0
max_value = 6.0
step = 0.1

[node name="H2" type="HBoxContainer" parent="BG/M/V/AudioOptions/M/Options"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="BG/M/V/AudioOptions/M/Options/H2"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.0745098, 0.537255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Musik"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="BG/M/V/AudioOptions/M/Options/H2"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.25098, 0.67451, 0.184314, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="BG/M/V/AudioOptions/M/Options/H2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("9_mqodm")
theme_override_icons/grabber_highlight = ExtResource("10_j7he6")
theme_override_icons/grabber_disabled = ExtResource("11_ul2d0")
min_value = -72.0
max_value = 6.0
step = 0.1

[node name="H3" type="HBoxContainer" parent="BG/M/V/AudioOptions/M/Options"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="BG/M/V/AudioOptions/M/Options/H3"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.0745098, 0.537255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="BG/M/V/AudioOptions/M/Options/H3"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.25098, 0.67451, 0.184314, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="BG/M/V/AudioOptions/M/Options/H3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("9_mqodm")
theme_override_icons/grabber_highlight = ExtResource("10_j7he6")
theme_override_icons/grabber_disabled = ExtResource("11_ul2d0")
min_value = -72.0
max_value = 6.0
step = 0.1

[node name="H4" type="HBoxContainer" parent="BG/M/V/AudioOptions/M/Options"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="BG/M/V/AudioOptions/M/Options/H4"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.0745098, 0.537255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="BG/M/V/AudioOptions/M/Options/H4"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.25098, 0.67451, 0.184314, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuSlider" type="HSlider" parent="BG/M/V/AudioOptions/M/Options/H4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("9_mqodm")
theme_override_icons/grabber_highlight = ExtResource("10_j7he6")
theme_override_icons/grabber_disabled = ExtResource("11_ul2d0")
min_value = -72.0
max_value = 6.0
step = 0.1

[node name="VideoOptions" type="NinePatchRect" parent="BG/M/V"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_vc324")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="BG/M/V/VideoOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Options" type="VBoxContainer" parent="BG/M/V/VideoOptions/M"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabHeader" type="Label" parent="BG/M/V/VideoOptions/M/Options"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.741176, 0.0509804, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Video"
horizontal_alignment = 1
vertical_alignment = 1

[node name="H1" type="HBoxContainer" parent="BG/M/V/VideoOptions/M/Options"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Window" type="Label" parent="BG/M/V/VideoOptions/M/Options/H1"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_colors/font_color = Color(0.0745098, 0.537255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Vollbild"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="BG/M/V/VideoOptions/M/Options/H1"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.152941, 0.639216, 0.929412, 1)
theme_override_colors/font_pressed_color = Color(0.152941, 0.639216, 0.929412, 1)
theme_override_colors/font_focus_color = Color(0.152941, 0.639216, 0.929412, 1)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
theme_override_icons/checked = ExtResource("11_bk0r5")
theme_override_icons/checked_disabled = ExtResource("11_ul2d0")
theme_override_icons/unchecked = ExtResource("9_mqodm")
theme_override_icons/unchecked_disabled = ExtResource("11_ul2d0")
text = "An"

[node name="CheckIcon" type="TextureRect" parent="BG/M/V/VideoOptions/M/Options/H1/CheckButton"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.609
anchor_top = 0.292
anchor_right = 0.783
anchor_bottom = 0.625
offset_left = -0.0140018
offset_top = -0.00800037
offset_right = -0.0180016
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_8qtrb")
expand_mode = 1

[node name="KeyOptions" type="NinePatchRect" parent="BG/M/V"]
visible = false
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_vc324")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="BG/M/V/KeyOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Options" type="VBoxContainer" parent="BG/M/V/KeyOptions/M"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabHeader" type="Label" parent="BG/M/V/KeyOptions/M/Options"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.741176, 0.0509804, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Tasten"
horizontal_alignment = 1
vertical_alignment = 1

[node name="H" type="HBoxContainer" parent="BG/M/V"]
layout_mode = 2
alignment = 1

[node name="OkayBtn" type="TextureButton" parent="BG/M/V/H"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_8st83")
texture_pressed = ExtResource("5_d5dbl")
texture_hover = ExtResource("6_bmld6")
texture_disabled = ExtResource("7_hw82d")

[node name="Label" type="Label" parent="BG/M/V/H/OkayBtn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.0625
anchor_right = 0.9375
anchor_bottom = 0.8125
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Okay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackBtn" type="TextureButton" parent="BG/M/V/H"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_8st83")
texture_pressed = ExtResource("5_d5dbl")
texture_hover = ExtResource("6_bmld6")
texture_disabled = ExtResource("7_hw82d")

[node name="Label" type="Label" parent="BG/M/V/H/BackBtn"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.0625
anchor_right = 0.9375
anchor_bottom = 0.8125
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_bux1i")
theme_override_font_sizes/font_size = 8
text = "Zurück"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="BG/M/V/BBox/AudioBtn" to="." method="_on_audio_btn_button_up"]
[connection signal="button_up" from="BG/M/V/BBox/VideoBtn" to="." method="_on_video_btn_button_up"]
[connection signal="button_up" from="BG/M/V/BBox/KeyBtn" to="." method="_on_key_btn_button_up"]
[connection signal="value_changed" from="BG/M/V/AudioOptions/M/Options/H/AllAudioSlider" to="." method="_on_all_audio_slider_value_changed"]
[connection signal="value_changed" from="BG/M/V/AudioOptions/M/Options/H2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="BG/M/V/AudioOptions/M/Options/H3/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="BG/M/V/AudioOptions/M/Options/H4/MenuSlider" to="." method="_on_menu_slider_value_changed"]
[connection signal="button_up" from="BG/M/V/VideoOptions/M/Options/H1/CheckButton" to="." method="_on_check_button_button_up"]
[connection signal="button_up" from="BG/M/V/H/OkayBtn" to="." method="_on_okay_btn_button_up"]
[connection signal="button_up" from="BG/M/V/H/BackBtn" to="." method="_on_back_btn_button_up"]
